<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto">
<item
    android:id="@+id/pencil_button"
    android:icon="@drawable/ic_edit_white_24dp"
    app:showAsAction="ifRoom"
    app:iconTint="@android:color/white"
    android:iconTint="@android:color/white"
    android:title="@string/action_scan">
</item>
</menu>